[gd_scene load_steps=36 format=3 uid="uid://b02g8s3f7cg4a"]

[ext_resource type="Texture2D" uid="uid://dvk4an6m4e3j0" path="res://assets/Action RPG Resources/Shadows/MediumShadow.png" id="1_vlldt"]
[ext_resource type="Shader" uid="uid://1jid57xhh638" path="res://scenes/components/white_shader.gdshader" id="2_s1rgi"]
[ext_resource type="Texture2D" uid="uid://c2qk5fanjbn8n" path="res://assets/character.png" id="4_3mea3"]
[ext_resource type="PackedScene" uid="uid://s01804hl3iwb" path="res://scenes/components/HitBox.tscn" id="6_5wa8t"]
[ext_resource type="Script" uid="uid://ouciypq4odxu" path="res://Player/Scripts/player.gd" id="6_s1rgi"]
[ext_resource type="PackedScene" uid="uid://8q2xropak2sp" path="res://scenes/components/HurtBox.tscn" id="7_p7tob"]
[ext_resource type="Script" uid="uid://cu0v76ax441u1" path="res://Player/Scripts/player_move_state_machine.gd" id="9_v0k0e"]
[ext_resource type="Script" uid="uid://crnmwscyogiqf" path="res://Player/Scripts/States/idle.gd" id="10_5wa8t"]
[ext_resource type="Script" uid="uid://ifslsc3mxo5t" path="res://Player/Scripts/States/walk.gd" id="11_p7tob"]
[ext_resource type="Script" uid="uid://c3x54vqj2lf0g" path="res://Player/Abilities/Scripts/ability_state_machine.gd" id="12_p7tob"]
[ext_resource type="Script" uid="uid://c377d2gln6o3n" path="res://Player/Abilities/Idle/idle_ability_state.gd" id="13_dm7nj"]
[ext_resource type="Script" uid="uid://cgtecm18eal6a" path="res://Player/Scripts/ability_cast.gd" id="14_3mea3"]
[ext_resource type="Script" uid="uid://cfk080cn8r8ix" path="res://Upgrades/Scripts/player_projectile_weapon.gd" id="14_dm7nj"]
[ext_resource type="Script" uid="uid://kvu6a8gqwipi" path="res://Player/Abilities/Melee/melee_ability_state.gd" id="15_7v5gs"]
[ext_resource type="Script" uid="uid://byyk55op0r2yc" path="res://Player/Abilities/Scripts/cooldown_manager.gd" id="15_8sa4y"]
[ext_resource type="Script" uid="uid://cipn6oewkjjas" path="res://Player/Abilities/Melee/melee2_ability_state.gd" id="16_8sa4y"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cw2d6"]
shader = ExtResource("2_s1rgi")
shader_parameter/active = false

[sub_resource type="GDScript" id="GDScript_1obj2"]
script/source = "extends \"res://scenes/components/Hitbox.gd\"

var knockback_vector: Vector2
"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dtn3s"]
radius = 7.4
height = 14.8

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lflfv"]
radius = 5.0
height = 16.0

[sub_resource type="Animation" id="Animation_d7xyo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3mea3"]
resource_name = "idle"
length = 0.8
loop_mode = 2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 4]
}

[sub_resource type="Animation" id="Animation_evw08"]
resource_name = "run"
length = 1.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_roy6y"]
_data = {
&"RESET": SubResource("Animation_d7xyo"),
&"idle": SubResource("Animation_3mea3"),
&"run": SubResource("Animation_evw08")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mdl7e"]
radius = 6.0
height = 20.0

[sub_resource type="Animation" id="Animation_70d11"]
length = 0.001

[sub_resource type="Animation" id="Animation_khinc"]
resource_name = "Start"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_bruh7"]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6eyey"]
_data = {
&"RESET": SubResource("Animation_70d11"),
&"Start": SubResource("Animation_khinc"),
&"Stop": SubResource("Animation_bruh7")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3mea3"]
size = Vector2(11, 43.0175)

[sub_resource type="CircleShape2D" id="CircleShape2D_7v5gs"]
radius = 17.1172

[sub_resource type="Animation" id="Animation_7v5gs"]
length = 0.001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AbilityStateMachine/Melee/HitBox:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AbilityStateMachine/Melee2/HitBox:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_3nb2p"]
resource_name = "melee_1"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [16, 17, 18, 19, 20, 21, 22]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AbilityStateMachine/Melee/HitBox:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_8sa4y"]
resource_name = "melee_2"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [24, 25, 26, 27, 28, 29]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AbilityStateMachine/Melee2/HitBox:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d7xyo"]
_data = {
&"RESET": SubResource("Animation_7v5gs"),
&"melee_1": SubResource("Animation_3nb2p"),
&"melee_2": SubResource("Animation_8sa4y")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
script = ExtResource("6_s1rgi")

[node name="shadow" type="Sprite2D" parent="."]
position = Vector2(0, 2)
texture = ExtResource("1_vlldt")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_cw2d6")
position = Vector2(0, -11)
texture = ExtResource("4_3mea3")
hframes = 8
vframes = 4

[node name="HitBox" parent="Sprite2D" instance=ExtResource("6_5wa8t")]
visible = false
position = Vector2(13, 0)
rotation = 1.5708
collision_mask = 8
monitoring = false
monitorable = false
script = SubResource("GDScript_1obj2")

[node name="CollisionShape2D" parent="Sprite2D/HitBox" index="0"]
shape = SubResource("CapsuleShape2D_dtn3s")
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_lflfv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_roy6y")
}

[node name="HurtBox" parent="." instance=ExtResource("7_p7tob")]
unique_name_in_owner = true
visible = false
collision_layer = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, -5)
shape = SubResource("CapsuleShape2D_mdl7e")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -22.554
bus = &"SFX"

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_6eyey")
}
autoplay = "Stop"

[node name="MoveStateMachine" type="Node" parent="."]
script = ExtResource("9_v0k0e")

[node name="Idle" type="Node" parent="MoveStateMachine"]
script = ExtResource("10_5wa8t")

[node name="Walk" type="Node" parent="MoveStateMachine"]
script = ExtResource("11_p7tob")

[node name="AbilityStateMachine" type="Node2D" parent="."]
script = ExtResource("12_p7tob")

[node name="Idle" type="Node2D" parent="AbilityStateMachine"]
script = ExtResource("13_dm7nj")

[node name="CastAbility" type="Node2D" parent="AbilityStateMachine" node_paths=PackedStringArray("firing_position")]
script = ExtResource("14_3mea3")
firing_position = NodePath("../../ProjectilePosition")

[node name="Melee" type="Node2D" parent="AbilityStateMachine"]
script = ExtResource("15_7v5gs")
cooldown = 2.0

[node name="HitBox" parent="AbilityStateMachine/Melee" instance=ExtResource("6_5wa8t")]
visible = false
collision_mask = 8
monitoring = false
monitorable = false

[node name="CollisionShape2D" parent="AbilityStateMachine/Melee/HitBox" index="0"]
position = Vector2(21.4912, -5.5)
rotation = 1.5708
shape = SubResource("RectangleShape2D_3mea3")

[node name="Melee2" type="Node2D" parent="AbilityStateMachine"]
script = ExtResource("16_8sa4y")
cooldown = 2.0

[node name="HitBox" parent="AbilityStateMachine/Melee2" instance=ExtResource("6_5wa8t")]
visible = false
collision_mask = 8
monitoring = false
monitorable = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AbilityStateMachine/Melee2/HitBox"]
position = Vector2(18, -10)
shape = SubResource("CircleShape2D_7v5gs")

[node name="CooldownManager" type="Node2D" parent="AbilityStateMachine"]
script = ExtResource("15_8sa4y")

[node name="PlayerProjectileWeapon" type="Node2D" parent="." node_paths=PackedStringArray("firing_position")]
script = ExtResource("14_dm7nj")
firing_position = NodePath("../ProjectilePosition")

[node name="ProjectilePosition" type="Marker2D" parent="."]
position = Vector2(0, -31)

[node name="AbilityAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_d7xyo")
}

[node name="Label" type="Label" parent="."]
offset_top = -48.0
offset_right = 40.0
offset_bottom = -28.0

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="invincibility_ended" from="HurtBox" to="." method="_on_hurt_box_invincibility_ended"]
[connection signal="invincibility_started" from="HurtBox" to="." method="_on_hurt_box_invincibility_started"]

[editable path="Sprite2D/HitBox"]
[editable path="HurtBox"]
[editable path="AbilityStateMachine/Melee/HitBox"]
